[jan] Make Others and cogwheel menu entry available on iOS (Bug #11937).

--- a/horde/themes/default/screen.css
+++ b/horde/themes/default/screen.css
@@ -1820,6 +1820,11 @@ left.horde-point-right {
 .horde-icon-settings:hover {
     background-image: url("graphics/settings-active.png");
 }
+.horde-icon-settings a {
+    width: 22px;
+    height: 27px;
+    text-indent: -10000px;
+}
 
 /* Sub bar. */
 #horde-sub {
